WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
43698
Web Inspector: Fix warning in WebCore/inspector/InspectorDebuggerAgent.cpp
https://bugs.webkit.org/show_bug.cgi?id=43698
Summary
Web Inspector: Fix warning in WebCore/inspector/InspectorDebuggerAgent.cpp
Csaba Osztrogonác
Reported
2010-08-08 16:50:32 PDT
gcc warning: ../../../WebCore/inspector/InspectorDebuggerAgent.cpp:132: warning: suggest parentheses around assignment used as truth value This warning introduced in
http://trac.webkit.org/changeset/64846
.
Attachments
proposed fix
(1.38 KB, patch)
2010-08-08 16:54 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2010-08-08 16:54:12 PDT
Created
attachment 63852
[details]
proposed fix
Antonio Gomes
Comment 2
2010-08-08 19:34:08 PDT
Comment on
attachment 63852
[details]
proposed fix You can either do it this way, or make perform the assignment before the if statement (which I personally would had done.). Either way is fine with me.
Csaba Osztrogonác
Comment 3
2010-08-08 22:43:57 PDT
Comment on
attachment 63852
[details]
proposed fix Clearing flags on attachment: 63852 Committed
r64964
: <
http://trac.webkit.org/changeset/64964
>
Csaba Osztrogonác
Comment 4
2010-08-08 22:44:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug