2010-08-08  Csaba Osztrogonác  <ossy@webkit.org>

Reviewed by Antonio Gomes.

        Web Inspector: Fix warning in WebCore/inspector/InspectorDebuggerAgent.cpp
        https://bugs.webkit.org/show_bug.cgi?id=43698

        * inspector/InspectorDebuggerAgent.cpp:
        (WebCore::InspectorDebuggerAgent::editScriptSource): Add suggested parentheses.


Canonical link: https://commits.webkit.org/55777@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64964 268f45cc-cd09-0410-ab3c-d52691b4dbfc